增加部门贡呢bug改好

--- a/App/Admin/View/Department/departmentList.html
+++ b/App/Admin/View/Department/departmentList.html
@@ -29,13 +29,17 @@
                     <h5>{$type}</h5>
 
                     <div class="ibox-tools">
-                        <button id="addParent" class="btn btn-success btn-circle" onclick="return false;" type="button"><a style="color: white">顶增</a>
+                        <button id="addParent" class="btn btn-success btn-circle" onclick="return false;" type="button">
+                            <a style="color: white">顶增</a>
                         </button>
-                        <button id="addLeaf" class="btn btn-info btn-circle" onclick="return false;" type="button"><a style="color: white">子增</a>
+                        <button id="addLeaf" class="btn btn-info btn-circle" onclick="return false;" type="button"><a
+                                style="color: white">子增</a>
                         </button>
-                        <button id="remove" onclick="return false;"   class="btn btn-danger btn-circle" type="button"><a style="color: white">删</a>
+                        <button id="remove" onclick="return false;" class="btn btn-danger btn-circle" type="button"><a
+                                style="color: white">删</a>
                         </button>
-                        <button id="edit" onclick="return false;" class="btn btn-default btn-circle" type="button"><a style="color: white">改</a>
+                        <button id="edit" onclick="return false;" class="btn btn-default btn-circle" type="button"><a
+                                style="color: white">改</a>
                         </button>
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
@@ -53,7 +57,8 @@
         <div class="col-sm-9 animated fadeInRight">
             <!--右侧部分开始-->
             <div class="row J_mainContent" id="content-main">
-                <iframe class="J_iframe" name="iframe0" width="100%" height="800px" src="/admin.php?c=Employee&a=employeeList"
+                <iframe class="J_iframe" name="iframe0" width="100%" height="800px"
+                        src="/admin.php?c=Employee&a=employeeList"
                         frameborder="0"
                         data-id="index_v1.html" seamless></iframe>
             </div>
@@ -77,11 +82,13 @@
         },
         data: {
             keep: {
-                parent:true,
-                leaf:true
+                parent: true,
+                leaf: false
             },
             simpleData: {
-                enable: true
+                enable: true,
+                idKey: "id",
+                pIdkey: "pId"
             }
         },
         callback: {
@@ -92,43 +99,48 @@
         }
     };
 
-    var zNodes ={$listDepartment};
+    var zNodes = {$listDepartment};
+
+
+    console.log(zNodes);
 
     var log, className = "dark";
     function beforeDrag(treeId, treeNodes) {
         return false;
     }
     function beforeRemove(treeId, treeNode) {
-        className = (className === "dark" ? "":"dark");
-        showLog("[ "+getTime()+" beforeRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
+        className = (className === "dark" ? "" : "dark");
+        showLog("[ " + getTime() + " beforeRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
         return confirm("确认删除 节点 -- " + treeNode.name + " 吗？");
     }
     function onRemove(e, treeId, treeNode) {
-        showLog("[ "+getTime()+" onRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
+        showLog("[ " + getTime() + " onRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
     }
     function beforeRename(treeId, treeNode, newName) {
         if (newName.length == 0) {
             alert("节点名称不能为空.");
             var zTree = $.fn.zTree.getZTreeObj("treeDemo");
-            setTimeout(function(){zTree.editName(treeNode)}, 10);
+            setTimeout(function () {
+                zTree.editName(treeNode)
+            }, 10);
             return false;
         }
         return true;
     }
     function showLog(str) {
         if (!log) log = $("#log");
-        log.append("<li class='"+className+"'>"+str+"</li>");
-        if(log.children("li").length > 8) {
+        log.append("<li class='" + className + "'>" + str + "</li>");
+        if (log.children("li").length > 8) {
             log.get(0).removeChild(log.children("li")[0]);
         }
     }
     function getTime() {
-        var now= new Date(),
-                h=now.getHours(),
-                m=now.getMinutes(),
-                s=now.getSeconds(),
-                ms=now.getMilliseconds();
-        return (h+":"+m+":"+s+ " " +ms);
+        var now = new Date(),
+                h = now.getHours(),
+                m = now.getMinutes(),
+                s = now.getSeconds(),
+                ms = now.getMilliseconds();
+        return (h + ":" + m + ":" + s + " " + ms);
     }
 
     var newCount = 1;
@@ -138,47 +150,70 @@
                 isParent = e.data.isParent,
                 isTop = e.data.isTop;
         var nodes = zTree.getSelectedNodes();
+        console.log(nodes.pId);
         var nodeNum = zTree.transformToArray(zTree.getNodes());
         var startNum;
         var maxNum = 0;
 
         //查询最大的id值，每次在此基础上加1，使得id不重复
-        if(nodeNum.length == 0){
+        if (nodeNum.length == 0) {
             startNum = 1;
-        }else{
+        } else {
 
-            for(var i=0; i<nodeNum.length; i++){
-                if(nodeNum[i].id > maxNum ){
-                    maxNum = nodeNum[i].id;
+            for (var i = 0; i < nodeNum.length; i++) {
+                if (Number(nodeNum[i].id) > maxNum) {
+                    maxNum = Number(nodeNum[i].id);
                 }
             }
 
             startNum = maxNum + 1;
         }
-        if(isTop){
+        if (isTop) {
             treeNode = 0;
-        }else{
+        } else {
             treeNode = nodes[0];
         }
 
         if (treeNode) {
-            var purl = "/admin.php?c=Employee&a=employeeList&cid="+startNum+"&pid="+treeNode.id;
-            treeNode = zTree.addNodes(treeNode, {id:startNum,url:purl, pId:treeNode.id, isParent:isParent, name:"new node" + startNum});
+            var purl = "/admin.php?c=Employee&a=employeeList&cid=" + startNum + "&pid=" + treeNode.id;
+            treeNode = zTree.addNodes(treeNode, {
+                id: startNum,
+                url: purl,
+                target: "iframe0",
+                pId: treeNode.id,
+                isParent: isParent,
+                name: "new node" + startNum
+            });
         } else {
-            var purl = "/admin.php?c=Employee&a=employeeList&cid="+startNum+"&pid="+treeNode.id;
-            treeNode = zTree.addNodes(null, {id:startNum,url:purl,target:"iframe0", pId:0, isParent:isParent, name:"new node" + startNum});
+            var purl = "/admin.php?c=Employee&a=employeeList&cid=" + startNum + "&pid=" + 0;
+            console.log(purl);
+            treeNode = zTree.addNodes(null, {
+                id: startNum,
+                url: purl,
+                target: "iframe0",
+                pId: 0,
+                isParent: isParent,
+                name: "new node" + startNum
+            });
             zTree.updateNode(treeNode);
         }
 
-        var url = "/admin.php?c=Department&a=addDepartment";
-        var data = {id:treeNode[0].id,pId:Number(treeNode[0].pId),url:treeNode[0].url,target:treeNode[0].target,name:treeNode[0].name};
+
         if (treeNode) {
+            var url = "/admin.php?c=Department&a=addDepartment";
+            var data = {
+                id: treeNode[0].id,
+                pId: Number(treeNode[0].pId),
+                url: treeNode[0].url,
+                target: treeNode[0].target,
+                name: treeNode[0].name
+            };
             $.post(
                     url,
                     data,
                     function (s) {
                         if (s.status == 1) {
-                            return dialog.success('成功',s.url);
+                            return dialog.success('成功', s.url);
                             // 跳转到相关页面
                         } else {
                             return dialog.error(s.message);
@@ -188,7 +223,8 @@
         } else {
             alert("叶子节点被锁定，无法增加子节点");
         }
-    };
+    }
+    ;
     function edit() {
         var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
                 nodes = zTree.getSelectedNodes(),
@@ -198,7 +234,8 @@
             return;
         }
         zTree.editName(treeNode);
-    };
+    }
+    ;
     function remove(e) {
         var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
                 nodes = zTree.getSelectedNodes(),
@@ -209,7 +246,8 @@
         }
         var callbackFlag = $("#callbackTrigger").attr("checked");
         zTree.removeNode(treeNode, callbackFlag);
-    };
+    }
+    ;
     function clearChildren(e) {
         var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
                 nodes = zTree.getSelectedNodes(),
@@ -219,15 +257,15 @@
             return;
         }
         zTree.removeChildNodes(treeNode);
-    };
+    }
+    ;
 
     $(document).ready(function () {
         $.fn.zTree.init($("#treeDemo"), setting, zNodes);
-        $("#addParent").bind("click", {isParent:true,isTop:true}, add);
-        $("#addLeaf").bind("click", {isParent:true}, add);
+        $("#addParent").bind("click", {isParent: true}, add);
+        $("#addLeaf").bind("click", {isParent: false}, add);
         $("#edit").bind("click", edit);
         $("#remove").bind("click", remove);
-        $("#clearChildren").bind("click", clearChildren);
     });
 </SCRIPT>
 </body>
