--- a/App/Admin/View/Department/departmentList.html
+++ b/App/Admin/View/Department/departmentList.html
@@ -45,7 +45,7 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('Menu/add')}" class="btn btn-primary ">新增部门</a>
+                            <a href="{:U('add')}" class="btn btn-primary ">新增部门</a>
                         </div>
                     </div>
                     <div class="table-responsive">
@@ -53,114 +53,46 @@
                             <thead>
                             <tr>
                                 <th>部门名称</th>
-                                <th>部门人员</th>
+                                <th>部门详情</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
                             <tbody>
+                            <foreach name="arrList" item="v">
+                                {$v}
+                            </foreach>
 
 
-                            <tr class="treegrid-1">
-                                <td>Root node</td><td>Additional info</td>
-                                <td>
-                                    <if condition="in_array($v['id'],array(0))">
-                                        <a class="btn btn-default btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <elseif condition="$v['pid'] eq 0"/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <else/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">添加子菜单</a>
-                                        <a href="{:U('edit',array('id' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">编辑菜单</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除菜单
-                                        </a>
-                                    </if>
-                                </td>
-                            </tr>
-                            <tr class="treegrid-2 treegrid-parent-1">
-                                <td>Node 1-1</td><td>Additional info</td>
-                                <td>
-                                    <if condition="in_array($v['id'],array(0))">
-                                        <a class="btn btn-default btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <elseif condition="$v['pid'] eq 0"/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <else/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">添加子菜单</a>
-                                        <a href="{:U('edit',array('id' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">编辑菜单</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除菜单
-                                        </a>
-                                    </if>
-                                </td>
-                            </tr>
-                            <tr class="treegrid-3 treegrid-parent-1">
-                                <td>Node 1-2</td><td>Additional info</td>
-                                <td>
-                                    <if condition="in_array($v['id'],array(0))">
-                                        <a class="btn btn-default btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <elseif condition="$v['pid'] eq 0"/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <else/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">添加子菜单</a>
-                                        <a href="{:U('edit',array('id' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">编辑菜单</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除菜单
-                                        </a>
-                                    </if>
-                                </td>
-                            </tr>
-                            <tr class="treegrid-4 treegrid-parent-3">
-                                <td>Node 1-2-1</td><td>Additional info</td>
-                                <td>
-                                    <if condition="in_array($v['id'],array(0))">
-                                        <a class="btn btn-default btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <elseif condition="$v['pid'] eq 0"/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <else/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">添加子菜单</a>
-                                        <a href="{:U('edit',array('id' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">编辑菜单</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除菜单
-                                        </a>
-                                    </if>
-                                </td>
-                            </tr>
+
                             </tbody>
+                            <!--<foreach name="listDepartment" item="v">-->
+                            <!--<tr class="treegrid-{$v.id} treegrid-parent-{$v.pid}">-->
+                            <!--<td>{$v.name}</td>-->
+                            <!--<td>Additional info</td>-->
+                            <!--<td>-->
+                            <!--<if condition="in_array($v['id'],array(0))">-->
+                            <!--<a class="btn btn-default btn-rounded">增加子菜单</a>-->
+                            <!--<a class="btn btn-default btn-rounded">编辑菜单</a>-->
+                            <!--<a class="btn btn-default btn-rounded">删除菜单</a>-->
+                            <!--<elseif condition="$v['pid'] eq 0"/>-->
+                            <!--<a href="{:U('add',array('pid' => $v['id']))}"-->
+                            <!--class="btn btn-primary btn-rounded">增加子菜单</a>-->
+                            <!--<a class="btn btn-default btn-rounded">编辑菜单</a>-->
+                            <!--<a class="btn btn-default btn-rounded">删除菜单</a>-->
+                            <!--<else/>-->
+                            <!--<a href="{:U('add',array('pid' => $v['id']))}"-->
+                            <!--class="btn btn-primary btn-rounded">添加子菜单</a>-->
+                            <!--<a href="{:U('edit',array('id' => $v['id']))}"-->
+                            <!--class="btn btn-primary btn-rounded">编辑菜单</a>-->
+                            <!--<a href="javascript:void(0)"-->
+                            <!--attr-message="删除"-->
+                            <!--class="btn btn-primary btn-rounded" id="zzcms-delete"-->
+                            <!--attr-id="{$v['id']}">删除菜单-->
+                            <!--</a>-->
+                            <!--</if>-->
+                            <!--</td>-->
+                            <!--</tr>-->
+                            <!--</foreach>-->
                         </table>
                         <div class="text-center">
                             {$page}
@@ -180,7 +112,11 @@
 <script src="__PUBLIC__/js/dialog.js"></script>
 <script src="__PUBLIC__/js/common.js"></script>
 <script>
-    $('.table').treegrid();
+    $(document).ready(function () {
+        $('.table').treegrid({
+            'initialState': 'collapsed',
+        });
+    });
     var SCOPE = {
         'add_url': '/admin.php?c=menu&a=add',
         'edit_url': '/admin.php?c=menu&a=edit',
