部门增加和删除功能完成

--- a/App/Admin/View/Department/departmentList.html
+++ b/App/Admin/View/Department/departmentList.html
@@ -90,7 +90,7 @@
     var SCOPE = {
         'add_url': '/admin.php?c=menu&a=add',
         'edit_url': '/admin.php?c=menu&a=edit',
-        'delete_url': '{:U("Menu/del")}',
+        'delete_url': '{:U("del")}',
         'listorder_url': '/admin.php?c=menu&a=listorder',
 
     };
