--- a/App/Admin/View/Office/add.html
+++ b/App/Admin/View/Office/add.html
@@ -32,11 +32,11 @@
                 <div class="ibox-content">
                     <form class="form-horizontal" id="submit-menu">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">父级部门</label>
+                            <label class="col-sm-2 control-label">父级职位</label>
 
                             <div class="col-sm-10">
                                 <select class="form-control m-b" id="parentName" name="pid">
-                                    <option value="0">顶级部门</option>
+                                    <option value="0">顶级职位</option>
                                     <foreach name="cate" item="v">
                                         <option value="{$v.id}" <if condition="$pid eq $v['id']">selected="selected"</if>>{$v.delimiter}{$v.name}</option>
                                     </foreach>
@@ -45,7 +45,7 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">部门名称</label>
+                            <label class="col-sm-2 control-label">职位名称</label>
 
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="name">
@@ -97,7 +97,7 @@
         },"JSON");
     });
     $("#button-cancal").click(function () {
-       window.location.href = '{:U("departmentList")}'
+       window.location.href = '{:U("officeList")}'
     })
 </script>
 </body>
