人员列表查看

--- a/App/Admin/View/Employee/employeeList.html
+++ b/App/Admin/View/Employee/employeeList.html
@@ -76,11 +76,11 @@
                                     <td>{$v.departmentname}</td>
                                     <td>
                                         <a href="{:U('edit',array('id' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">编辑菜单</a>
+                                           class="btn btn-primary btn-rounded">编辑人员</a>
                                         <a href="javascript:void(0)"
                                            attr-message="删除"
                                            class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除菜单
+                                           attr-id="{$v['id']}">删除人员
                                     </td>
                                 </tr>
                             </foreach>
